Fixed blog headers on mobile + Fixed horizontal scrolling of post content

--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -72,9 +72,13 @@
 
 .post-content {
   padding: calc(#{$spacing-unit} * 3) calc(#{$spacing-unit} * 2) calc(#{$spacing-unit} * 2);
-  // padding: 90px 60px 60px;
   background-color: $white;
   overflow: auto;
+
+  @media only screen and (max-width: 768px) {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
 
 .content, .post-content {
